--- a/data/news.txt
+++ b/data/news.txt
@@ -1,4 +1,4 @@
-1%Андрей Созинов%Видеокарты NVIDIA нового поколения могут быть дороже нынешних%Компания NVIDIA сейчас находится в довольно непростой ситуации, ведь ей уже пора выпускать новое поколение видеокарт, но она ещё не разобралась, что делать со старым. И если верить тайваньскому ресурсу DigiTimes, данная ситуация скажется на продажах видеокарт NVIDIA во второй половине текущего года, а также на ценах видеокарт нового поколения.Для начала напомним, что согласно относительно недавним сообщениям, у NVIDIA и её партнёров, производителей видеокарт, скопились довольно большие запасы графических процессоров и видеокарт нынешнего поколения. Это и является одной из главных причин, почему до сих пор не были представлены видеокарты нового поколения.
-2%Антон Тестов%Intel: ПК на базе 10-нм процессоров появятся в продаже в конце 2019 года%Ранее в этом году корпорация Intel подтвердила, что задержит массовое производство 10-нм процессоров до 2019 года из-за проблем с выходом годных, но не уточнила, когда именно в следующем году начнется массовое производство данных микросхем. На этой неделе Intel внесла ясность в свои планы. Первые системы на базе указанных CPU попадут на полки магазинов в конце 2019 г. Но есть нюанс: 14-нм продукты по-прежнему будут играть огромную роль в следующем году.Intel подтвердила намерение начать массовое производство процессоров с использованием технологии 10 нм в 2019 году в ходе телеконференции с инвесторами и аналитиками в четверг вечером. Согласно официальному обещанию Intel, первые ПК на базе вышеназванных процессоров попадут на полки магазинов в сезон предрождественских продаж 2019 года, с конца октября по конец декабря. Хотя компания явно этого не говорит, принимая во внимание современные циклы производства микросхем (90 дней и более), а также необходимость собрать и поставить системы в магазины, старт изготовления новых процессоров намечен на второй–третий квартал следующего года (за три–шесть месяцев до начала продаж компьютеров).
-3%Константин Ходаковский%Google представила последнюю предварительную сборку Android P%Хотя три недели назад Google и сообщила о том, что третья бета-версия Android P уже близка к финалу, разработчики всё же решили выпустить ещё одну предварительную сборку грядущей мобильной операционной системы — на этот раз действительно последнюю. И хотя она носит имя Beta 4, Google также называет её Release Candidate.В заметке из официального блога разработчиков Android говорится, что следующей крупной публичной сборкой мобильной ОС уже будет финальная стабильная версия. Стоит отметить, что ни официального имени, ни версии пока не сообщается, хотя можно с определённой долей уверенности говорить, что это будет Android 9.0. А вот какая сладость на латинскую букву «P» будет выбрана на этот раз — остаётся лишь гадать. Возможно, Popsicle (американская марка фруктового мороженого на палочке) или Peppermint (мятная конфета)?
-4%Иван Сусанин%Всё самое интересное прямо здесь и сейчас!%Новости собираются с мира по нитке на совершенно безвозмездной основе. Ты легко можешь посодействовать проекту, добавив ссылку на интересную новость, статью, интервью или проект о python. А еще можно форкнуть код этого проекта на  Github и помочь в развитии его функциональности. И еще один вариант - проголосовать рублем
+1||Видеокарты NVIDIA нового поколения могут быть дороже нынешних||Компания NVIDIA сейчас находится в довольно непростой ситуации, ведь ей уже пора выпускать новое поколение видеокарт, но она ещё не разобралась, что делать со старым. И если верить тайваньскому ресурсу DigiTimes, данная ситуация скажется на продажах видеокарт NVIDIA во второй половине текущего года, а также на ценах видеокарт нового поколения.Для начала напомним, что согласно относительно недавним сообщениям, у NVIDIA и её партнёров, производителей видеокарт, скопились довольно большие запасы графических процессоров и видеокарт нынешнего поколения. Это и является одной из главных причин, почему до сих пор не были представлены видеокарты нового поколения.
+2||Intel: ПК на базе 10-нм процессоров появятся в продаже в конце 2019 года||Ранее в этом году корпорация Intel подтвердила, что задержит массовое производство 10-нм процессоров до 2019 года из-за проблем с выходом годных, но не уточнила, когда именно в следующем году начнется массовое производство данных микросхем. На этой неделе Intel внесла ясность в свои планы. Первые системы на базе указанных CPU попадут на полки магазинов в конце 2019 г. Но есть нюанс: 14-нм продукты по-прежнему будут играть огромную роль в следующем году.Intel подтвердила намерение начать массовое производство процессоров с использованием технологии 10 нм в 2019 году в ходе телеконференции с инвесторами и аналитиками в четверг вечером. Согласно официальному обещанию Intel, первые ПК на базе вышеназванных процессоров попадут на полки магазинов в сезон предрождественских продаж 2019 года, с конца октября по конец декабря. Хотя компания явно этого не говорит, принимая во внимание современные циклы производства микросхем (90 дней и более), а также необходимость собрать и поставить системы в магазины, старт изготовления новых процессоров намечен на второй–третий квартал следующего года (за три–шесть месяцев до начала продаж компьютеров).
+3||Обнаружена уязвимость, позволяющая оплачивать роуминг за счет другого абонента||На «хакерской» конференции Def Con 26, которая проходила с 9 по 12 августа 2018 года в Лас-Вегасе, с докладом выступила Зильке Хольтманс (Silke Holtmanns) — специалист по информационной безопасности в Nokia Bell Labs. Она рассказала об уязвимости в сеансовом протоколе DIAMETER, которая допускает мошенническую схему повышения качества услуг мобильной связи в роуминговой сети за счет другого абонента. 
+4||Ядро Linux обновили до версии 4.18||12 августа 2018 года Линус Торвальдс объявил о выходе ядра Linux 4.18. Изменения затрагивают 13 067 файлов. Разработчики смогли сделать ядро компактнее, удалив 677 480 участков кода и добавив 578 788.Предрелизная доработка ядра Linux 4.18 Два месяца, прошедшие с момента объявления релиз-кандидата Linux 4.18-rc1, разработчики проводили тестирование и устраняли неполадки ядра. По словам Торвальдса, продукт планировалось выпустить неделей ранее, однако было решено исправить некоторые частные недочёты, связанные с сетью, а также с драйверами и VFS.
